# laser-sep-cubesat-study

./: README.md  campaign.toml  manager_program.md  pyproject.toml
configs/profiles/: laser_dual_window_codesign.toml  laser_dual_window_fixed.toml  sep_baseline_direct_capture.toml
configs/vehicles/: capstone_class_demo_v1.toml
data/ephemeris/: de440_local_2026a.npz
data/gravity/: grgm1200a_degree8_pa.json
docs/: STUDY_PLAN.md  experiment_matrix.md  mission_definition.md  publication_positioning.md  review_questions.md
src/aether_traj/: __init__.py  campaign_cli.py  campaign_manager.py  campaign_test_support.py  config.py  dynamics.py  ephemeris.py  experiment_cli.py  experiments.py  gravity.py  jax_surrogate.py  models.py  optimizer_workflow.py  optimizers.py  run_catalog.py  sep_de_cli.py  sep_de_workflow.py  sep_jax_cli.py  sep_jax_workflow.py  sep_lbfgs_cli.py  sep_lbfgs_workflow.py  sep_pso_cli.py  sep_pso_workflow.py  worker_cli.py
tests/: test_campaign_manager.py  test_dynamics.py  test_scaffold.py  test_workflow_matrix.py
