[project]
name = "aether-laser-sep-cubesat-study"
version = "0.1.0"
description = "Standalone CAPSTONE-class laser-augmented SEP study scaffold"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aether_traj"]
